fix: 🐛 cursor visible

--- a/src/components/section-title/section-title.scss
+++ b/src/components/section-title/section-title.scss
@@ -1,9 +1,8 @@
-@use '../../styles/utils/utils';
-
 .caderninho .section-title {
-  background-color: utils.$color-primary-medium;
+  background-color: var(--color-primary-main);
   border-radius: var(--border-radius);
   color: white;
   font-size: 17px;
+  mix-blend-mode: multiply;
   padding: 7px 14px;
 }
